--- a/src/_includes/components/banner-info-covid.pug
+++ b/src/_includes/components/banner-info-covid.pug
@@ -7,5 +7,6 @@ mixin banner-info-covid()
         colorMode: true,
         infoHeader: 'How we are keeping you safe during COVID-19',
         infoText: "As an outdoor shop, we’ve taken precautionary measures to ensure the safety of all our customers and team members.",
-        linkText: 'Read Our Statement'
+        linkText: 'Read Our Statement',
+        displayMode: true
       })
